<resources>
    <string name="app_name">X Contact</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contact_name">contact name</string>
    <string name="contact_number">contact number</string>
    <string name="contact_email">contact email</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
</resources>